--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.5",
+    "@mui/material": "^7.3.5",
     "lucide-react": "^0.555.0",
     "next": "16.0.6",
     "next-intl": "^4.5.6",
