--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.5",
     "@mui/material": "^7.3.5",
+    "@vercel/analytics": "^1.6.1",
     "lucide-react": "^0.555.0",
     "next": "^16.0.7",
     "next-intl": "^4.5.6",
